# Lina

./: .clang-format  .gitignore  .lldbinit  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  lina.h  lldb_matrix_formatters.py
.github/workflows/: cmake-multi-platform.yml
benchmarks/: CMakeLists.txt  benchmark_comparison.cpp  benchmark_lina.cpp
lina/: CMakeLists.txt  lina.h
test/: CMakeLists.txt  test_camera.cpp  test_constexpr_math.cpp  test_inverse_matrix.cpp  test_lina.cpp  test_matrix.cpp  test_matrix_operations.cpp  test_str_operations.cpp  test_transforms.cpp  test_vector.cpp  test_vector_matrix_operations.cpp  test_vector_operations.cpp
test/test_build/: CMakeLists.txt  test_build.cpp
